Initial async I/O tryouts
Introduce second crate, `cbidiff`, to be a command-line frontend to the
bidiff library. Use pico-args for argument parsing, async-std for async
I/O, env_logger+log for logging.

Read both files fully for now, doesn't actually diff anything yet.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,6 @@
-[package]
-name = "bidiff"
-version = "0.1.0"
-authors = ["Amos Wenger <amoswenger@gmail.com>"]
-edition = "2018"
 
-[dependencies]
+[workspace]
+members = [
+    "bidiff",
+    "cbidiff"
+]
