--- a/oipss/Cargo.toml
+++ b/oipss/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
-name = "bidiff"
+name = "oipss"
 version = "0.1.0"
 authors = ["Amos Wenger <amoswenger@gmail.com>"]
 edition = "2018"
 
+# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
 [dependencies]
-oipss = { path = "../oipss" }
-async-std = "0.99.12"
 log = "0.4.8"
