--- a/crates/bic/Cargo.toml
+++ b/crates/bic/Cargo.toml
@@ -1,13 +1,14 @@
 [package]
-name = "cbidiff"
+name = "bic"
 version = "0.1.0"
 authors = ["Amos Wenger <amoswenger@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-bidiff = { path = "../bidiff" }
+bidiff = { path = "../bidiff", features = ["enc"] }
+bipatch = { path = "../bipatch" }
+
 pico-args = "0.3.0"
-anyhow = "1.0.19"
 log = "0.4.8"
 env_logger = "0.7.1"
 byteorder = "1.3.2"
@@ -15,3 +16,4 @@ brotli = "3.3.0"
 integer-encoding = "1.0.7"
 hmac-sha256 = "0.1.2"
 size = "0.1.2"
+failure = { version = "0.1.6", features = ["backtrace"] }
