--- a/crates/bidiff/Cargo.toml
+++ b/crates/bidiff/Cargo.toml
@@ -16,4 +16,5 @@ divsufsort = "1.0.2"
 byteorder = { version = "1.3.2", optional = true }
 integer-encoding = { version = "1.0.7", optional = true }
 brotli = { version = "3.3.0", optional = true }
+rayon = "1.2.1"
 
