--- a/crates/bidiff/Cargo.toml
+++ b/crates/bidiff/Cargo.toml
@@ -9,13 +9,15 @@ default = ["enc"]
 enc = ["byteorder", "integer-encoding", "brotli"]
 
 [dependencies]
-log = "0.4.8"
-divsufsort = "1.0.2"
-
 # for enc
 byteorder = { version = "1.3.2", optional = true }
 integer-encoding = { version = "1.0.7", optional = true }
 brotli = { version = "3.3.0", optional = true }
+
+# other deps
+log = "0.4.8"
+sacabase = "2.0.0"
+sacapart = "2.0.0"
+divsufsort = "2.0.0"
 rayon = "1.2.1"
-sacabase = "1.0.0"
 
