--- a/crates/bic/Cargo.toml
+++ b/crates/bic/Cargo.toml
@@ -12,8 +12,13 @@ pico-args = "0.3.0"
 log = "0.4.8"
 env_logger = "0.7.1"
 byteorder = "1.3.2"
-brotli = "3.3.0"
 integer-encoding = "1.0.7"
 hmac-sha256 = "0.1.2"
 size = "0.1.2"
 failure = { version = "0.1.6", features = ["backtrace"] }
+pipe = "0.2.0"
+
+[dependencies.comde]
+version = "0.1.0"
+default-features = false
+features = ["snappy", "deflate", "zstandard", "brotli"]
