--- a/crates/bidiff/Cargo.toml
+++ b/crates/bidiff/Cargo.toml
@@ -6,13 +6,12 @@ edition = "2018"
 
 [features]
 default = ["enc"]
-enc = ["byteorder", "integer-encoding", "brotli"]
+enc = ["byteorder", "integer-encoding"]
 
 [dependencies]
 # for enc
 byteorder = { version = "1.3.2", optional = true }
 integer-encoding = { version = "1.0.7", optional = true }
-brotli = { version = "3.3.0", optional = true }
 
 # other deps
 log = "0.4.8"
