--- a/crates/bipatch/Cargo.toml
+++ b/crates/bipatch/Cargo.toml
@@ -1,6 +1,8 @@
 [package]
 name = "bipatch"
 version = "0.1.0"
+description = "A bsdiff-derived binary patching tool - patch library"
+license = "Apache-2.0 OR MIT"
 authors = ["Amos Wenger <amoswenger@gmail.com>"]
 edition = "2018"
 
