--- a/crates/bic/Cargo.toml
+++ b/crates/bic/Cargo.toml
@@ -10,16 +10,16 @@ edition = "2018"
 bidiff = { path = "../bidiff", features = ["enc"] }
 bipatch = { path = "../bipatch" }
 
-pico-args = "0.3.0"
 log = "0.4.8"
 env_logger = "0.7.1"
 byteorder = "1.3.2"
 integer-encoding = "1.0.7"
 hmac-sha256 = "0.1.2"
 size = "0.1.2"
-failure = { version = "0.1.6", features = ["backtrace"] }
 pipe = "0.2.0"
 crossbeam-utils = "0.7.0"
+argh = "0.1.3"
+anyhow = "1.0.26"
 
 [dependencies.comde]
 version = "0.1.0"
