--- a/crates/bidiff/Cargo.toml
+++ b/crates/bidiff/Cargo.toml
@@ -14,7 +14,7 @@ instructions = []
 [dependencies]
 # for enc
 byteorder = { version = "1.3.2", optional = true }
-integer-encoding = { version = "1.0.7", optional = true }
+integer-encoding = { version = "1.0.7", optional = true, default-features = false }
 
 # other deps
 log = "0.4.8"
