--- a/crates/bipatch/Cargo.toml
+++ b/crates/bipatch/Cargo.toml
@@ -8,4 +8,4 @@ edition = "2018"
 
 [dependencies]
 byteorder = { version = "1.3.2" }
-integer-encoding = { version = "1.0.7" }
+integer-encoding = { version = "1.0.7", default-features = false }
