--- a/crates/bic/Cargo.toml
+++ b/crates/bic/Cargo.toml
@@ -1,25 +1,26 @@
 [package]
 name = "bic"
-version = "0.1.0"
+version = "1.0.0"
 description = "A bsdiff-derived binary patching tool - example CLI tool"
 license = "Apache-2.0 OR MIT"
 authors = ["Amos Wenger <amoswenger@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/divvun/bidiff"
 
 [dependencies]
 bidiff = { path = "../bidiff", features = ["enc"] }
 bipatch = { path = "../bipatch" }
 
-log = "0.4.8"
+log = "0.4.11"
 env_logger = "0.7.1"
-byteorder = "1.3.2"
-integer-encoding = "1.0.7"
-hmac-sha256 = "0.1.2"
+byteorder = "1.3.4"
+integer-encoding = "2.0.0"
+hmac-sha256 = "0.1.6"
 size = "0.1.2"
-pipe = "0.2.0"
-crossbeam-utils = "0.7.0"
+pipe = "0.3.0"
+crossbeam-utils = "0.7.2"
 argh = "0.1.3"
-anyhow = "1.0.26"
+anyhow = "1.0.32"
 
 [dependencies.comde]
 version = "0.1.0"
