--- a/crates/bidiff/Cargo.toml
+++ b/crates/bidiff/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "bidiff"
-version = "0.1.0"
+version = "1.0.0"
 description = "A bsdiff-derived binary patching tool - patch library"
 license = "Apache-2.0 OR MIT"
 authors = ["Amos Wenger <amoswenger@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/divvun/bidiff"
 
 [features]
 default = ["enc"]
@@ -13,16 +14,16 @@ instructions = []
 
 [dependencies]
 # for enc
-byteorder = { version = "1.3.2", optional = true }
-integer-encoding = { version = "1.0.7", optional = true, default-features = false }
+byteorder = { version = "1.3.4", optional = true }
+integer-encoding = { version = "2.0.0", optional = true, default-features = false }
 
 # other deps
-log = "0.4.8"
+log = "0.4.11"
 sacabase = "2.0.0"
 sacapart = "2.0.0"
 divsufsort = "2.0.0"
-rayon = "1.2.1"
+rayon = "1.4.0"
 
 [dev-dependencies]
-proptest = "0.9.4"
+proptest = "0.10.1"
 
