--- a/crates/bipatch/Cargo.toml
+++ b/crates/bipatch/Cargo.toml
@@ -1,11 +1,12 @@
 [package]
 name = "bipatch"
-version = "0.1.1"
+version = "1.0.0"
 description = "A bsdiff-derived binary patching tool - patch library"
 license = "Apache-2.0 OR MIT"
 authors = ["Amos Wenger <amoswenger@gmail.com>"]
 edition = "2018"
+repository = "https://github.com/divvun/bidiff"
 
 [dependencies]
-byteorder = { version = "1.3.2" }
-integer-encoding = { version = "1.0.7", default-features = false }
+byteorder = { version = "1.3.4" }
+integer-encoding = { version = "2.0.0", default-features = false }
