--- a/crates/bipatch/Cargo.toml
+++ b/crates/bipatch/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "bipatch"
-version = "1.0.0"
+version = "1.1.0"
 description = "A bsdiff-derived binary patching tool - patch library"
 license = "Apache-2.0 OR MIT"
 authors = ["Amos Wenger <amoswenger@gmail.com>"]
@@ -8,5 +8,5 @@ edition = "2018"
 repository = "https://github.com/divvun/bidiff"
 
 [dependencies]
-byteorder = { version = "1.3.4" }
-integer-encoding = { version = "2.0.0", default-features = false }
+byteorder = "1.4.3"
+integer-encoding = { version = "3.0.4", default-features = false }
