Put performance profiling for bidiff in optional feature

--- a/crates/bidiff/Cargo.toml
+++ b/crates/bidiff/Cargo.toml
@@ -8,9 +8,10 @@ edition = "2018"
 repository = "https://github.com/divvun/bidiff"
 
 [features]
-default = ["enc"]
+default = ["enc", "profiling"]
 enc = ["byteorder", "integer-encoding"]
 instructions = []
+profiling = []
 
 [dependencies]
 # for enc
