Put performance profiling for bidiff in optional feature (#12)

--- a/crates/bidiff/Cargo.toml
+++ b/crates/bidiff/Cargo.toml
@@ -11,6 +11,7 @@ repository = "https://github.com/divvun/bidiff"
 default = ["enc"]
 enc = ["byteorder", "integer-encoding"]
 instructions = []
+profiling = []
 
 [dependencies]
 # for enc
