--- a/crates/bic/Cargo.toml
+++ b/crates/bic/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 repository = "https://github.com/divvun/bidiff"
 
 [dependencies]
-bidiff = { path = "../bidiff", features = ["enc"] }
+bidiff = { path = "../bidiff", features = ["enc", "parallel"] }
 bipatch = { path = "../bipatch" }
 
 memmap2 = "0.9"
@@ -16,10 +16,10 @@ log = "0.4.17"
 env_logger = "0.10.0"
 byteorder = "1.4.3"
 integer-encoding = "3.0.4"
-hmac-sha256 = "1.1.6"
+blake3 = "1"
+mimalloc = "0.1"
 size = "0.4.1"
-pipe = "0.4.0"
-crossbeam-utils = "0.8.14"
+os_pipe = "1"
 argh = "0.1.10"
 anyhow = "1.0.68"
 
