--- a/crates/bipatch/Cargo.toml
+++ b/crates/bipatch/Cargo.toml
@@ -4,9 +4,8 @@ version = "1.1.0"
 description = "A bsdiff-derived binary patching tool - patch library"
 license = "Apache-2.0 OR MIT"
 authors = ["Amos Wenger <amoswenger@gmail.com>"]
-edition = "2018"
+edition = "2024"
 repository = "https://github.com/divvun/bidiff"
 
 [dependencies]
-byteorder = "1.4.3"
-integer-encoding = { version = "3.0.4", default-features = false }
+integer-encoding.workspace = true
